--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,11 @@ button {
   background: linear-gradient(255deg, rgba(114, 62, 188, 0.861782212885154) 0%, rgba(162, 62, 188, 1) 100%);
 }
 
+.header .basket-icon {
+  position: absolute;
+  right: 0;
+}
+
 .header .money {
   color: rgb(175, 175, 175);
   font-weight: bold;
@@ -45,33 +50,50 @@ button {
 }
 
 .products {
+  margin-top: 20px;
   align-items: center;
   justify-content: center;
   display: flex;
   flex-wrap: wrap;
-  gap: 15px;
+  gap: 30px;
 }
 
 .product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
   padding: 10px;
-  width: calc(40% - 15px);
+  width: calc(40% - 30px);
   height: 100%;
   margin-bottom: 20px;
   background: #fff;
   border: 1px solid #ddd;
 }
 
-.image-container {
-  width: 500px;
-  height: 500px;
+.modal {
+  position: fixed;
+  top: 25%;
+  right: 25%;
+  width: 50%;
+  height: 50%;
+  background-color: white;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.product img {
+.product .image-container {
   width: 100%;
   height: 100%;
-  /* width: 100%; */
-  object-fit: cover;
+}
+
+.product .image-container img {
+  width: 100%;
+  height: 100%;
 }
 
 .actions {
@@ -106,10 +128,17 @@ button {
   height: 30px;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 850px) {
   .header {
-    padding: 20px 10px;
-    font-size: 20px;
+    font-size: 26px;
+  }
+
+  .container {
+    width: 95%;
+  }
+
+  .product {
+    width: 70%;
   }
 }
 
