--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,31 @@ button {
   align-items: center;
 }
 
+.modal-product {
+  margin-top: 30px;
+  background-color: #0085ad;
+}
+
+.modal-product p {
+
+  margin-top: 20px;
+  background-color: #84bd00;
+
+}
+
+.modal-close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 30px;
+  height: 30px;
+}
+
+.close-icon {
+  width: 100%;
+  height: 100%;
+}
+
 .product .image-container {
   width: 100%;
   height: 100%;
@@ -139,6 +164,12 @@ button {
 
   .product {
     width: 70%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .modal {
+    height: 40%;
   }
 }
 
